# anneal-sinkhorn

./: anneal_sinkhorn.ipynb  annealed_sinkhorn_jax.py  annealed_sinkhorn_scan.py  pyproject.toml  run.py  test_closure.py  test_dual.py
.ipynb_checkpoints/: anneal_sinkhorn-checkpoint.ipynb
annealed_sinkhorn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/: basic_usage.py  benchmark.py
sinkhorn/: core.py  metrics.py  schedule.py  utils.py
